--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,3 +16,15 @@ body{
     border-style: none;
     border-radius: .5rem;
 ;}  
+.numberImput{
+    transition: .25s;
+    border-radius:.25rem;
+    width: 2.5rem;
+    border: none;
+    font-size: 12px;
+
+}
+.numberImput:focus{
+    transition: .25s;
+    background-color: rgb(170, 207, 255);
+}
